# profile.mobile.apps.native.location.lbs-setting

./: AUTHORS  CMakeLists.txt  org.tizen.gps-syspopup.efl  org.tizen.gps-syspopup.manifest  org.tizen.setting-location.efl  org.tizen.setting-location.manifest  org.tizen.setting-location.xml
gps-syspopup/: CMakeLists.txt  gps-syspopup.c  gps-syspopup.h  org.tizen.gps-syspopup.xml
gps-syspopup/edc/: CMakeLists.txt  gps.edc
gps-syspopup/po/: CMakeLists.txt  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  el_GR.po  en_GB.po  en_PH.po  en_US.po  es.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it.po  it_IT.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  mk.po  nb.po  nl.po  (+21 more)
packaging/: org.tizen.lbs_setting.spec
resources/edc/: CMakeLists.txt  setting.edc
resources/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  el_GR.po  en.po  en_GB.po  en_PH.po  en_US.po  es.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  (+19 more)
src/: CMakeLists.txt  lbs-setting-common.h  lbs-setting-help.c  lbs-setting-help.h  lbs-setting-string.h  lbs-setting-window.c  lbs-setting-window.h  lbs-setting.c  lbs-setting.h
src/view/: lbs-setting-view-location.c  lbs-setting-view-location.h  lbs-setting-view-popup.c  lbs-setting-view-popup.h
