CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(gps-syspopup C)

SET(PACKAGE_NAME org.tizen.gps-syspopup)
SET(PREFIX /usr/apps/${PACKAGE_NAME})
SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(LOCALEDIR "${RESDIR}/locale")
SET(SMACKDIR "/etc/smack/accesses.d")
SET(EDJ_DIR "${RESDIR}/edje")

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

# Set ready to build
SET(EXT_LIBS_DIRS "")
SET(EXT_LIBS_DEFS "")
SET(EXT_LIBS_LDFLAGS "")

# Set external libraries
SET(EXT_LIBS
	E_APPFW
	E_EA
	E_EA_EXTENSION
	E_ELEMENTARY
	E_EDJE
	E_EVAS
	E_MANAGER
	E_DLOG
	E_VCONF
	E_APPCORE_EFL
	E_ECORE
	E_ECORE_X
	E_SYSPOPUP
	E_SYSTEM_POWER
	E_FEEDBACK
)

FOREACH(flag ${EXT_LIBS})
	SET(EXT_LIBS_DIRS		${EXT_LIBS_DIRS}	${${flag}_INCLUDE_DIRS})
	SET(EXT_LIBS_DEFS		${EXT_LIBS_DEFS}	${${flag}_CFLAGS_OTHER})
	SET(EXT_LIBS_LDFLAGS	${EXT_LIBS_LDFLAGS}	${${flag}_LDFLAGS})
ENDFOREACH(flag)

# Set ready to build
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${EXT_LIBS_DIRS})

ADD_DEFINITIONS(
	${EXT_LIBS_DEFS}
)

SET(SRCS
	gps-syspopup.c
)

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DDATADIR=\"${DATADIR}\"")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} "-Wl,--as-needed -pie" "-ldl" ${EXT_LIBS_LDFLAGS})

message(${EXT_LIBS_LDFLAGS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.xml DESTINATION /usr/share/packages)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.gps-syspopup.efl DESTINATION ${SMACKDIR})

ADD_SUBDIRECTORY(po)
ADD_SUBDIRECTORY(edc)
