CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_CUSTOM_TARGET(gps.edj
	COMMAND edje_cc -no-save -id ${CMAKE_CURRENT_SOURCE_DIR}/../data/images
		${CMAKE_CURRENT_SOURCE_DIR}/gps.edc ${CMAKE_CURRENT_SOURCE_DIR}/gps.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gps.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} gps.edj)

#install binary & edj files
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/gps.edj DESTINATION ${EDJ_DIR})